--- a/index.html
+++ b/index.html
@@ -1,93 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hosterr</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-  </head>
-  <body>
-    <!-- navbar -->
-    <div class="main-container">
-      <div class="flex-container">
-        <nav class="navbar">
-          <div class="logo-container">
-            <img src="Assets/Logo.svg" alt="hosterr" />
-            <span>Hosterr is hiring!</span>
-          </div>
-          <ul class="nav-list">
-            <li><a href="#">Plans</a></li>
-            <li><a href="#">Find Domain</a></li>
-            <li><a href="#">Why Hosterr</a></li>
-            <li><a href="#">Sign in</a></li>
-            <li><a href="#" class="cta-btn btn">Join Waitlist</a></li>
-          </ul>
-          <img
-            src="Assets/Hamburger Menu.svg"
-            alt="Hamburger"
-            class="ham-icon"
-          />
-        </nav>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hosterr Landing Page</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav class="navbar">
+        <div class="logo">
+            <img src="Assets/Logo.svg" alt="logo">
+            <button class="gradient-btn">Hosting is hiring</button>
 
-        <!-- main hero section -->
-
-        <section class="hero-section">
-          <div class="text-container">
-            <h1>Host your website in less than 5 minutes.</h1>
-            <p>
-              With Hosterr, get your website up and running in no less than 5
-              minutes with the most competitive pricing packages available
-              online.
-            </p>
-            <div class="input-container">
-              <input type="email" placeholder="Enter e-mail address" />
-              <a href="#" class="btn">Join Waitlist</a>
+        </div>
+            <ul class="nav-menue">
+                <li class="nav-item"><a href="#">Plans</a></li>
+                <li class="nav-item"><a href="#">Find Domain</a></li>
+                <li class="nav-item"><a href="#">Why Hosterr</a></li>
+            </ul>
+            <div class="login-signup">
+                <button class="btn btn1">Sign in</button>
+                <button class="btn">Join Waitlist</button>
             </div>
-            <div class="checkmark-container">
-              <img src="Assets/Checkmark.svg" alt="Checkmark" />
-              <span>No spam, ever. Unsubscribe anytime.</span>
+            <div class="hamburger-icon">
+                <img src="Assets/hamburger.svg" alt="hamburger">
             </div>
-          </div>
-          <div class="image-container">
-            <div class="img-content">
-              <img
-                src="Assets/Hero Image (Model).png"
-                alt="Model"
-                class="model-img"
-              />
-              <img
-                src="Assets/Purple Shape.svg"
-                alt="Purple Shape"
-                class="purple"
-              />
-              <img src="Assets/Pink Shape.svg" alt="Pink Shape" class="pink" />
-              <img src="Assets/Blue Shape.svg" alt="Blue Shape" class="blue" />
+    </nav>
+    <section class="content">
+        <div class="left">
+            <h3>Host your website in less than 5 minutes.</h3>
+            <p>With Hosterr, get your website up and running in no less than 5 minutes with the most competitive pricing packages available online.</p>
+            <div class="email">
+                <input type="text" name="email" placeholder="Enter e-mail address">
+                <button class="btn">Join Waitlist</button>
             </div>
-          </div>
-        </section>
-
-        <footer class="footer">
-          <ul class="footer-list">
-            <li><a href="https://github.com/alSiddegMohmmed">Github</a></li>
-            <li><a href="https://twitter.com/Solitudeiskey">Twitter</a></li>
-            <li><a href="https://www.linkedin.com/in/alsiddegmohmmed/">linkedin</a></li>
-          </ul>
-
-          <div class="help-container">
-            <img src="Assets/Help Avatar.svg" alt="help-avatar" />
-            <div class="help-text">
-              <p class="first">Have any questions?</p>
-              <p class="second">Talk to a Specialist</p>
+            <div class="check">
+                <img src="Assets/Checkmark.svg" alt="check">
+                <p>No spam,ever.Unsusbscribe anytime.</p>
             </div>
-          </div>
-        </footer>
-      </div>
-    </div>
-    <script src="script.js"></script>
-  </body>
+        </div>
+        <div class="right">
+            <img src="Assets/Blue Shape.svg" class="position"  id="img1"alt="blue">
+            <img src="Assets/Pink Shape.svg" class="position"  id="img2"alt="pink">
+            <img src="Assets/Purple Shape.svg" class="position" id="img3" alt="purple">
+            <img src="Assets/Hero Image (Model).png" class="position" id="img4" alt="purple" width="340" height="" >
+        </div>
+    </section>
+    <footer class="footer">
+        <ul class="link">
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Twitter</a></li>
+        </ul>
+        <div class="help">
+            <img src="Assets/helpavatar.svg" alt="help">
+            <div class="question">
+                <h4>Have any questions?</h4>
+                <p>Talk to specialist</p>
+            </div>
+        </div>
+    </footer>
+    
+</body>
 </html>
