--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     </section>
     <footer class="footer">
         <ul class="link">
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Twitter</a></li>
+            <li><a href="https://github.com/alSiddegMohmmed">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/alsiddegmohmmed/">LLinkedIn</a></li>
+            <li><a href="https://twitter.com/Solitudeiskey">Twitter</a></li>
         </ul>
         <div class="help">
             <img src="Assets/helpavatar.svg" alt="help">
