--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <li><a href="https://twitter.com/Solitudeiskey">Twitter</a></li>
         </ul>
         <div class="help">
-            <img src="Assets/helpavatar.svg" alt="help">
+            <img src="Assets/Help Avatar.svg alt="help">
             <div class="question">
                 <h4>Have any questions?</h4>
                 <p>Talk to specialist</p>
